<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="350dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_add_filtters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:text="@string/add_filters_to_your_app"
        />
    <TextView
        android:id="@+id/tv_contractor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
     android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
    app:layout_constraintTop_toBottomOf="@id/tv_add_filtters"
        android:textStyle="bold"
        android:textColor="#8D98A1"
        android:textSize="16sp"
        android:text="@string/_1_contractor"
        />
    //#21317B
    <TextView
        android:id="@+id/tv_call_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_contractor"
        android:textStyle="bold"
        android:textColor="#8D98A1"
        android:textSize="16sp"
        android:text="@string/_2_call_center_opertor"
        />
    <TextView
        android:id="@+id/tv_bpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_call_center"
        android:textStyle="bold"
        android:textColor="#8D98A1"
        android:textSize="16sp"
        android:text="@string/_3_bpo"
        />
    <TextView
        android:id="@+id/tv_trainee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bpo"
        android:textStyle="bold"
        android:textColor="#8D98A1"
        android:textSize="16sp"
        android:text="@string/_4_trainee"
        />
    <TextView
        android:id="@+id/tv_architect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trainee"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="110dp"
        android:textStyle="bold"
        android:textColor="#8D98A1"
        android:textSize="16sp"
        android:text="@string/_5_architect"
        />

</androidx.constraintlayout.widget.ConstraintLayout>