<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F5F5F5"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.JobsDetailFragment"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/white"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"

    >
    <ImageView
        android:id="@+id/iv_back_job_detail"
        android:layout_width="23dp"
        android:layout_height="23dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_back"

        />
    <TextView
        android:id="@+id/tv_job_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@id/iv_back_job_detail"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/tvJobName"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_job_sallary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv_job_name"
        app:layout_constraintTop_toBottomOf="@id/tv_job_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/tvJobSallary"
        android:fontFamily="@font/robotomedium"
        android:layout_marginTop="7dp"

        />
    <ImageView
        android:id="@+id/iv_company_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_job_name"
        app:layout_constraintTop_toBottomOf="@id/tv_job_sallary"
        android:src="@mipmap/ic_india"
        android:background="@drawable/rectangle"
        android:layout_marginLeft="1dp"
        android:scaleType="fitXY"
        android:layout_marginTop="23dp"
        />
    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_company_logo"
        app:layout_constraintTop_toTopOf="@id/iv_company_logo"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:text="@string/tvCompanyName"
        android:fontFamily="@font/robotobold"
        />
    <TextView
        android:id="@+id/tv_company_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_company_logo"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tvCompanyLocation"
        android:fontFamily="@font/robotoregular"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tv_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="@id/view1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/tvRequirements"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_requirements_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/tv_requirements"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/we_hiring_for_candidates_and_some_employees_for_cce_for_bpo_inbound_with_no_target_voice_process_hiring_for_domestic_or_international_process_for_both_day_and_night_shifts_fresher_and_experience_candidate_apply"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="12dp"
       android:paddingRight="14dp"
        android:lineHeight="22dp"
        android:paddingLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_requirements_detail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_requirements_detail"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/shift_timing_6_00_to_3_00_pm_or_10_00_to_6_00pm_n_5_days_working_n_rotational_off_n_hourly_basis_salary_n_minimum_115_rupees_in_1_hour_9_hours_shift_n_maximum_175_rupeens_2k_attendance_bonus_5k_quarterly_bonus"
        android:fontFamily="@font/robotoregular"
        android:lineHeight="30dp"
        android:layout_marginTop="12dp"
        android:paddingRight="14dp"
        android:paddingLeft="14dp"
        />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tv_education_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/view2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/education_and_timing"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_education_timing"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/education"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_education_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_education"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/graduate_diploma"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_working_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_education_detail"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/working_days"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_working_days_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_working_days"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/monday_to_friday"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_working_days_timing"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/shift_timings"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_shift_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_shift"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/_9_00_am_5_00_pm"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/view2"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/tv_person_of_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/view3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/person_of_contact"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_contact_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_person_of_contact"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/name"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contact_person_name"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/raita_sharma"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/phone_number"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/_91_9874563210"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="Email Address:"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_address"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="rita.sharma@gmail.com"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_prefered_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/preferred_time_for_contacting"
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_prefered_time"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/_10_00_am_06_00_pm"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        />

    <TextView
        android:id="@+id/tv_contact_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_time"
        android:textColor="#8D98A1"
        android:textSize="12sp"
        android:text="@string/monday_to_friday"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        />
    <ImageView
        android:id="@+id/iv_call_disabled"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_person_of_contact"
        android:layout_marginRight="15dp"
        android:src="@mipmap/ic_call_disable"
        />
    <ImageView
        android:id="@+id/iv_call_enabled"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_person_of_contact"
        android:layout_marginRight="15dp"
        android:src="@mipmap/ic_call_enable"
        />
    <TextView
        android:id="@+id/tv_details_next_light"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#21317B"
        android:text="@string/apply_for_the_job"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17dp"
        />
    <TextView
        android:id="@+id/tv_details_next_apllied"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="33dp"
        android:visibility="gone"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#939393"
        android:text="@string/job_applied"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17dp"
        />
    //#939393


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>